Fix bottom rail spacing with | #13267

--- a/src/platform/site-wide/sass/merger.scss
+++ b/src/platform/site-wide/sass/merger.scss
@@ -341,9 +341,13 @@
 
         a {
           color: white;
+          &:visited {
+            color: white;
+          }
         }
-        a:visited {
-          color: white;
+        &:after {
+          content: "|";
+          padding: 0 1rem;
         }
       }
     }
